Thu Oct 26 14:26:27 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/dblib/unittests/common.c src/dblib/unittests/common.h
	* src/dblib/unittests/t0001.c
	- corrected command-line option handling

Sat Oct 21 16:42:08 EDT 2006	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/unittests/t0022.c
	- dbresults succeeds if metadata or only return status is
	- present, cf. ML yesterday.

Sat Oct 21 14:22:44 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* autogen.sh: fix some portability issues

Wed Oct 18 21:38:57 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/tables.c:
	- fix problem with mssql2005 and SQLTables

Mon Oct 16 09:48:31 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: reduce system calls required

Thu Oct 12 11:19:02 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c:
	- fix wrong assert
	- return correctly RETURNSTATUS under Sybase

Wed Oct 11 16:37:04 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix wrong assert using numerics

Tue Oct 10 15:52:22 EDT 2006	JK Lowden <jklowden@freetds.org>
	* doc/osql.txt clarified

Fri Oct  6 17:08:43 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/freebcp.c src/apps/freebcp.h doc/freebcp.txt
	- applied -0 patch from ML
	- by Constantin Vasilyev <vasilyev@ncbi.nlm.nih.gov>

Wed Oct  4 19:46:29 EDT 2006	JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c 
	- applied -P from stdin patch 
	- from ML Constantin Vasilyev <vasilyev@ncbi.nlm.nih.gov>

Wed Oct  4 17:36:43 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/osql GNU sed does not support -E

Wed Oct  4 14:48:20 EDT 2006	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am doc/osql.txt added osql man page

Wed Oct  4 14:12:25 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/Makefile.am add osql as installable script

Tue Oct  3 15:40:12 EDT 2006	JK Lowden <jklowden@freetds.org>